--- a/portfolio/tswd/classroom/94870A3Spring23.md
+++ b/portfolio/tswd/classroom/94870A3Spring23.md
@@ -5,3 +5,7 @@
 <div class="flourish-embed flourish-hierarchy" data-src="visualisation/12458581"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
 
 <a href="https://docs.google.com/spreadsheets/d/1VP5cky0BB-4_3AfePF-LDHQkbnGARLkP3oroxyMuQpw/edit?usp=sharing" target="_blank">Spreadsheet of class members, linkedin URLs and summary background (PERMISSION REQUIRED: Shared only with Prof. Goranson)</a>
+
+## Class Gender distribution
+
+<div class="flourish-embed flourish-hierarchy" data-src="visualisation/12458199"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
